# vanjari

./: .coveragerc  .gitignore  README.rst  pyproject.toml  vanjari-fast-predict.slurm  vanjari-predict.slurm  vanjari-train.slurm  vanjari-tune.slurm  vanjari.ipynb  vanjari_demo.ipynb  vanjaricorgi-validate.slurm  vanjaricorgi-validatecommand.slurm  vanjarint-predict.slurm  vanjarint-preprocess.slurm  vanjarint-train.slurm  vanjarint-tune.slurm  vanjarint-validate.slurm  vanjaristack-train.slurm  vanjaristack-train2.slurm  vanjaristack-tune.slurm  vanjaristack-validate.slurm
.github/workflows/: docs.yml  results.yml
docs/: api.rst  cli.rst  conf.py  demo.rst  ictv.rst  index.rst
tests/: test_data.py
vanjari/: VMR-tree.txt  __init__.py  apps.py  data.py  dnaembedding.py  metrics.py  models.py  nucleotidetransformer.py  output.py  tree.txt  validate.py  viruses.dot
