[tool.poetry]
name = "vanjari"
version = "0.1.0"
description = "Classification of viruses"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<2.0.0"
hierarchicalsoftmax = ">=1.4.4"
h5py = ">=3.8.0"
bio-corgi = ">=0.4.3"
pyfastx = ">=1.1.0"
openpyxl = ">=3.1.5"
transformers = "^4.53.2"
barbet = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
ipykernel = ">=6.6.1"
coverage = ">=7.0"
autopep8 = ">=1.5.7"
Sphinx = ">=5.0"
nbsphinx = ">=0.8.7"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
myst-parser = ">=0.15.2"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
vanjari-fast = "vanjari.apps:VanjariFast.main"
vanjari-fast-tools = "vanjari.apps:VanjariFast.tools"

vanjarint = "vanjari.apps:VanjariNT.main"
vanjarint-tools = "vanjari.apps:VanjariNT.tools"

vanjari = "vanjari.apps:Vanjari.main"
vanjari-tools = "vanjari.apps:Vanjari.tools"